@@ -1,3 +1,5 @@
+	* Added a ranking to ChannelDB.wordstats.
+	
 	* Added 'roulette' command to Fun plugin.
 	
 	* Added a Channel.lobotomies command to list the channels in which
